--- a/app/src/main/res/layout/activity_hr.xml
+++ b/app/src/main/res/layout/activity_hr.xml
@@ -4,22 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Hr">
 
-    <Button
-        android:id="@+id/other"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="279dp"
-        tools:layout_editor_absoluteY="26dp" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
-        android:layout_width="562dp"
-        android:layout_height="1064dp"
-        tools:layout_editor_absoluteX="-74dp"
-        tools:layout_editor_absoluteY="-157dp">
+        android:layout_width="463dp"
+        android:layout_height="1034dp"
+        android:layout_marginTop="3dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
 
     </androidx.viewpager2.widget.ViewPager2>
@@ -49,11 +45,6 @@
             android:icon="@drawable/companyunfill"
             android:text="Company" />
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:icon="@drawable/starrunfill"
-            android:text="Saved" />
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
@@ -63,7 +54,4 @@
 
     </com.google.android.material.tabs.TabLayout>
 
-
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
