--- a/app/src/main/res/layout/fragment_saved.xml
+++ b/app/src/main/res/layout/fragment_saved.xml
@@ -11,4 +11,9 @@
         android:layout_height="match_parent"
         android:text="Saved" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recSave"
+        android:layout_width="match_parent"
+        android:layout_height="593dp" />
+
 </FrameLayout>
