--- a/app/src/main/res/layout/fragment_hrjob.xml
+++ b/app/src/main/res/layout/fragment_hrjob.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Hrjob">
+    tools:context=".Job_HR">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
