--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,12 @@
     tools:context=".MainActivity">
 
 
-<!--    <Button-->
-<!--        android:id="@+id/other"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Button"-->
-<!--        tools:layout_editor_absoluteY="151dp" />-->
+    <Button
+        android:id="@+id/other"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteY="151dp" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
